# py-stock

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  한국투자증권_오픈API_전체문서_20250815_030000.xlsx
api/: admin.py  models.py  urls.py  views.py
api/data/: kis_code.py  kosdaq_code.mst  kospi_code.mst
api/functions/: domestic_stock_functions.py  kis_auth.py
api/migrations/: 0001_initial.py
api/nodes/: __init__.py  base.py  enums.py  gemini_node.py  gemini_summary_node.py  kis_node.py  test_node.py  youtube_node.py
config/: settings.py  urls.py
front/: urls.py  views.py
front/static/front/js/: custom-node-editor.js  drawflow-editor.js  rete-editor.js  workflow-editor-example.js  workflow.js
front/templates/front/: index.html
